--- a/frontend/src/app/layout/home/home.component.css
+++ b/frontend/src/app/layout/home/home.component.css
@@ -1,7 +1,39 @@
-.mi-boton-rc {
+.btn_home{
     background-color:#CCA831;
     color: black;
 }
-.featurette-divider {
-   color: #CCA831; 
-}
+
+.carousel {
+    margin-bottom: 4rem;
+  }
+
+  /* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+  /* rtl:begin:ignore */
+  .marketing .col-lg-4 p {
+    margin-right: .75rem;
+    margin-left: .75rem;
+  }
+  /* rtl:end:ignore */
+
+  .featurette-divider {
+    margin: 5rem 0;
+    color: black; /* Space out the Bootstrap <hr> more */
+  }
+  
+  /* Thin out the marketing headings */
+  /* rtl:begin:remove */
+  .featurette-heading {
+    letter-spacing: -.05rem;
+    color: #CCA831;
+  }
+  
+  /* rtl:end:remove */
+  
+  
