--- a/frontend/src/app/layout/home/home.component.html
+++ b/frontend/src/app/layout/home/home.component.html
@@ -3,7 +3,7 @@
     <ngb-carousel>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img [src]="images[0]" alt="Center first slide" class="carousel-image opacity-75 rounded mh-100" style="width: 100%; height: 80vh"/>
+          <img [src]="images[0]" alt="img_company_pelu 3" class="carousel-image opacity-100 rounded mh-100" style="width: 100%; height: 80vh"/>
         </div>
         <div class="carousel-caption">
           <h3>Nail & Hair Haven</h3>
@@ -12,16 +12,16 @@
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img [src]="images[1]" alt="Center second slide" class="carousel-image opacity-75 rounded mh-100" style="width: 100%; height: 80vh"/>
+          <img [src]="images[1]" alt="img_home_Eurovision" class="carousel-image opacity_100 rounded mh-100" style="width: 100%; height: 80vh"/>
         </div>
         <div class="carousel-caption">
-          <h3>Pure Beauty Oasis</h3>
-          <p>Donde la Belleza y la Relajación se Encuentran</p>
+          <h3 class="text1">Pure Beauty Oasis</h3>
+          <p class="text1">Donde la Belleza y la Relajación se Encuentran</p>
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img [src]="images[2]" alt="Center third slide" class="carousel-image opacity-75 rounded mh-100" style="width: 100%; height: 80vh"/>
+          <img [src]="images[2]" alt="img_company_pelu 9" class="carousel-image opacity-100 rounded mh-100" style="width: 100%; height: 80vh"/>
         </div>
         <div class="carousel-caption">
           <h3>Elegance & Nails Studio </h3>
@@ -42,22 +42,22 @@
     <div class="row">
       <div class="col-lg-4">
           <img src="/assets/img_home/Tratamientos2.png" class="d-block w-100" alt="Slide 3">
-          <h2 class="fw-bold ">Tratamientos</h2>
+          <h2>Tratamientos</h2>
           <p>Renueva tu look con nuestros cortes y tratamientos exclusivos.</p>
-          <p><a class="btn btn_home" routerLink="/treatments">Ver lista »</a></p>
+          <p><a class="btn btn_home" routerLink="/treatments">A UN SOLO CLICK »</a></p>
       </div><!-- /.col-lg-4 -->
   
       <div class="col-lg-4">
           <img src="/assets/img_home/Centros2.png" class="d-block w-100" alt="Slide 3">
-          <h2 class="fw-bold">Centros</h2>
-          <p>Experiencia única de belleza y bienestar bajo un mismo techo.</p>
-          <p><a class="btn btn_home" routerLink="/companies">Ver lista »</a></p>
+          <h2>Centros</h2>
+          <p>Experiencia única de belleza y bienestar con profesionales.</p>
+          <p><a class="btn btn_home" routerLink="/companies">A UN SOLO CLICK »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
           <img src="/assets/img_home/Categorias2.png" class="d-block w-100" alt="Slide 3">
-          <h2 class="fw-bold">Categorías</h2>
+          <h2>Categorías</h2>
           <p>Explora cortes, uñas y más en nuestra amplia gama de servicios</p>
-          <p><a class="btn btn_home" routerLink="/categories">Ver lista »</a></p>
+          <p><a class="btn btn_home" routerLink="/categories">A UN SOLO CLICK »</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
   
